<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/llCeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_toLeftOf="@+id/llAcciones"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tvComa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coma"
            android:textSize="@dimen/main.tv.num.tamanio"
            android:textColor="@color/color.numero"
            android:paddingTop="@dimen/main.tv.arr"
            android:paddingBottom="@dimen/main.tv.aba"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="coma"/>
        <TextView
            android:id="@+id/tvCero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cero"
            android:textSize="@dimen/main.tv.num.tamanio"
            android:textColor="@color/color.numero"
            android:paddingTop="@dimen/main.tv.arr"
            android:paddingBottom="@dimen/main.tv.aba"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="cero"/>

        <TextView
            android:id="@+id/tvIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/igual"
            android:textSize="@dimen/main.tv.num.tamanio"
            android:textColor="@color/color.numero"
            android:paddingTop="@dimen/main.tv.arr"
            android:paddingBottom="@dimen/main.tv.aba"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="igual"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvUno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uno"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_alignBaseline="@+id/tvDos"
        android:layout_alignBottom="@+id/tvDos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="uno"/>

    <TextView
        android:id="@+id/tvDos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dos"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_above="@id/llCeros"
        android:layout_toRightOf="@id/tvUno"
        android:onClick="dos"/>

    <TextView
        android:id="@+id/tvTres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tres"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_above="@id/llCeros"
        android:layout_toRightOf="@id/tvDos"
        android:onClick="tres"/>

    <TextView
        android:id="@+id/tvCuatro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuatro"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_above="@id/tvUno"
        android:onClick="cuatro"/>

    <TextView
        android:id="@+id/tvCinco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinco"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_toRightOf="@id/tvCuatro"
        android:layout_above="@id/tvDos"
        android:onClick="cinco"/>

    <TextView
        android:id="@+id/tvSeis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seis"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_toRightOf="@id/tvCinco"
        android:layout_above="@id/tvTres"
        android:onClick="seis"/>

    <TextView
        android:id="@+id/tvSiete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siete"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_above="@id/tvCuatro"
        android:onClick="siete"/>

    <TextView
        android:id="@+id/tvOcho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocho"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_toRightOf="@id/tvSiete"
        android:layout_above="@id/tvCinco"
        android:onClick="ocho"/>
    <TextView
        android:id="@+id/tvNueve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueve"
        android:textSize="@dimen/main.tv.num.tamanio"
        android:textColor="@color/color.numero"
        android:paddingTop="@dimen/main.tv.arr"
        android:paddingBottom="@dimen/main.tv.aba"
        android:paddingLeft="@dimen/main.tv.izq"
        android:paddingRight="@dimen/main.tv.der"
        android:background="@color/colorAccent"
        android:layout_toRightOf="@id/tvOcho"
        android:layout_above="@id/tvSeis"
        android:onClick="nueve"/>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvSiete"
        android:text="@string/resultado"
        android:hint="0"
        android:textSize="@dimen/main.tv.resultado.size"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/main.tv.resultado.padding"
        />

    <LinearLayout
        android:id="@id/llAcciones"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_toRightOf="@id/tvNueve"
        android:layout_below="@id/tvResultado">
        <TextView
            android:id="@+id/tvCE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ce"
            android:textSize="@dimen/main.tv.acc.tamanio"
            android:textColor="@color/color.numero"
            android:paddingLeft="@dimen/main.tv.acc.izq"
            android:paddingRight="@dimen/main.tv.acc.der"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="CE"/>

        <TextView
            android:id="@+id/tvDivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="@dimen/main.tv.acc.tamanio"
            android:textColor="@color/color.numero"
            android:paddingLeft="@dimen/main.tv.acc.izq"
            android:paddingRight="@dimen/main.tv.acc.der"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="division"/>
        <TextView
            android:id="@+id/tvMultiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"
            android:textSize="@dimen/main.tv.acc.tamanio"
            android:textColor="@color/color.numero"
            android:paddingLeft="@dimen/main.tv.acc.izq"
            android:paddingRight="@dimen/main.tv.acc.der"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="multiplicacion"/>

        <TextView
            android:id="@+id/tvResta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resta"
            android:textSize="@dimen/main.tv.acc.tamanio"
            android:textColor="@color/color.numero"
            android:paddingLeft="@dimen/main.tv.acc.izq"
            android:paddingRight="@dimen/main.tv.acc.der"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="resta"/>

        <TextView
            android:id="@+id/tvSuma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suma"
            android:textSize="@dimen/main.tv.acc.tamanio"
            android:textColor="@color/color.numero"
            android:paddingLeft="@dimen/main.tv.acc.izq"
            android:paddingRight="@dimen/main.tv.acc.der"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:onClick="suma"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:layout_below="@id/tvResultado"
        android:layout_toRightOf="@id/llAcciones">
    </LinearLayout>

</RelativeLayout>
